--- a/style.css
+++ b/style.css
@@ -146,6 +146,7 @@ a{color:#555;font-weight:bold;font-size: 19px;text-decoration:none;}
     margin-bottom: 30px;
    
 }
+.container{margin: 0;padding: 0;}
 
 
 
