--- a/style.css
+++ b/style.css
@@ -80,9 +80,10 @@ justify-content: center;
 .p-3{
    display: flex;
    justify-content: center;
-    height: 150px;
+    height: 150px;margin: auto;
 }
-.li{margin:auto;width: 130px;height: 140px;border-radius: 20px;  border: 1px solid rgba(0,0,0,0.01);border:  1.4px solid #555;}
+.li{margin:auto;width: 130px;height: 140px;border-radius: 20px;
+border: 1px solid rgba(0,0,0,0.01);border:  1.4px solid #555;}
 .li:hover{box-shadow: inset 4px 4px 6px -1px rgba(0,0,0,0.2),
              inset  4px 4px 6px -1px rgba(255,255,255,0.7),
                     -0.5px -0.5px 0px rgba(255,255,255,1),
@@ -101,6 +102,7 @@ justify-content: center;
    transform: translateY(3px);
 }
 .p-3.mb-2.bg-dark.text-white.h-400 {
+ margin: auto;
 }
 
 
@@ -121,8 +123,8 @@ font-size: 61px;}
 a{color:#555;font-weight:bold;font-size: 19px;text-decoration:none;}
 
 
-.col img{
- height: 200px;
+.featurette .ss{
+ height: 260px;
 }
 .card {margin: 0;padding: 0;
     position: relative;
@@ -146,7 +148,13 @@ a{color:#555;font-weight:bold;font-size: 19px;text-decoration:none;}
     margin-bottom: 30px;
    
 }
-.container{margin: 0;padding: 0;}
+.container{margin: auto;direction: rtl}
+.container i{font-size: 33px; transition: transform 0.8s;margin-right: 4px;}
+.container i:hover{color:#16c79a; transform: scale(1.3);}
+.col img{height: 200px;}
+.span{margin-right: 130px;margin-bottom: 10px;}
+ 
+
 
 
 
