--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ a{color:#555;font-weight:bold;font-size: 19px;text-decoration:none;}
    
 }
 .row{margin: 0;padding: 0;
- font-weight: bold;}
+ font-weight: bold;width: 100%;}
 
     .row-cols-1>* {
     flex: 0 0 auto;
@@ -151,7 +151,7 @@ a{color:#555;font-weight:bold;font-size: 19px;text-decoration:none;}
 .container{margin: auto;direction: rtl}
 .container i{font-size: 33px; transition: transform 0.8s;margin-right: 4px;}
 .container i:hover{color:#16c79a; transform: scale(1.3);}
-.col img{height: 200px;}
+.col img{height: 200px;margin: 0;padding: 0;}
 .span{margin-right: 130px;margin-bottom: 10px;}
  
 
