--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ text-align: center;
 font-family: sans-serif;}
 
 .one{height: 90px;width: 100%;opacity: 0.7;}
-.img4{align-items: center;justify-content: center;margin-top: -113px;
+.img4{align-items: center;justify-content: center;margin-top: -130px;
  box-shadow: 0 0 10px #2196f3,
              0 0 20px  #2196f3,
               0 0 80px #2196f3,
@@ -50,6 +50,7 @@ justify-content: center;
               
 }
 
+
 .a i{
   font-size: 37px;
   color: #777;
@@ -64,15 +65,16 @@ justify-content: center;
                      0px 12px 10px  -10px rgba(0,0,0,0.5) ;
    border: 1px solid rgba(0,0,0,0.01);
    transform: translateY(3px);
+   text-decoration: none;
 }
-.a:hover i{
+.a:hover i{text-decoration: none;
   transform: scale(0.90);
   
 }
-.a:hover .fa-facebook{color:blue;}
-.a:hover .fa-instagram{color:#ef5350;}
-.a:hover .fa-whatsapp{color: #4fce5d;}
-.a:hover .fa-chalkboard-teacher{color: #2196f3
+.a:hover .fa-facebook{color:blue;text-decoration: none;}
+.a:hover .fa-instagram{color:#ef5350;text-decoration: none;}
+.a:hover .fa-whatsapp{color: #4fce5d;text-decoration: none;}
+.a:hover .fa-chalkboard-teacher{color: #2196f3;text-decoration: none
 ;}
 
 
@@ -83,13 +85,17 @@ justify-content: center;
     height: 150px;margin: auto;
 }
 .li{margin:auto;width: 130px;height: 140px;border-radius: 20px;
-border: 1px solid rgba(0,0,0,0.01);border:  1.4px solid #555;}
+border: 1px solid rgba(0,0,0,0.01);
+border:  2.4px solid #555;}
+
+.li a{text-decoration: none;}
 .li:hover{box-shadow: inset 4px 4px 6px -1px rgba(0,0,0,0.2),
              inset  4px 4px 6px -1px rgba(255,255,255,0.7),
                     -0.5px -0.5px 0px rgba(255,255,255,1),
                     -0.5px -0.5px 0px rgba(0,0,0,0.15),
                      0px 12px 10px  -10px rgba(0,0,0,0.5) ;
-   border: 1px solid rgba(0,0,0,0.01);border:  2px solid white;
+   border: 1px solid rgba(0,0,0,0.01);
+   border:  2px solid white;
    transform: translateY(3px);
    transition: transform 0.5s;transform: translateY(3px);}
    
@@ -126,22 +132,11 @@ a{color:#555;font-weight:bold;font-size: 19px;text-decoration:none;}
 .featurette .ss{
  height: 260px;
 }
-.card {margin: 0;padding: 0;
-    position: relative;
-    display: flex;
-    flex-direction:column;
-    min-width: 0;
-    word-wrap: break-word;
-     background-color: #D7E0E6; 
-    background-clip: border-box;
-    border: 1px solid rgba(0,0,0,.125);
-    border-radius: .25rem;
-   
-}
+
 .row{margin: 0;padding: 0;
  font-weight: bold;width: 100%;}
 
-    .row-cols-1>* {
+    .row-cols-1 {
     flex: 0 0 auto;
     width: 500px;
     margin: auto;
@@ -153,7 +148,7 @@ a{color:#555;font-weight:bold;font-size: 19px;text-decoration:none;}
 .container i:hover{color:#16c79a; transform: scale(1.3);}
 .col img{height: 200px;margin: 0;padding: 0;}
 .span{margin-right: 130px;margin-bottom: 10px;}
- .isam p{margin: auto; animation: isam 5.2s infinite;}
+ .fi p{margin: auto; animation: isam 5.2s infinite;background-color: #7c9473;font-weight: bold;}
  @keyframes isam{
  0%,100%{
   
@@ -167,11 +162,40 @@ a{color:#555;font-weight:bold;font-size: 19px;text-decoration:none;}
   
   }
   90%{
-   color:  #1687A7;
-  }
- }
+   color:  #1687A7; 
+ }}
 
 
 
+.intro{
+ background-image: url('kf.jpg');
+ background-size: cover;
+ min-height: 250px;
+ background-repeat: no-repeat;
+ background-attachment: fixed;
+ margin-top: 50px;
+ border-style:groove;
+}
+.body-intro{
+ color: #eee;
+ min-height: 250px;
+ background:rgba(2,2,2,0.7);
+}
 
 
+.intro i{
+ font-weight: bold;
+ padding-top: 30px;
+ padding-bottom: 30px;
+ transition: 0.4s ease-in-out;
+ font-size: 70px;
+}
+.intro i:hover{
+ opacity: 0.7;
+ color:white;
+}
+
+.intro-span{
+ color:#eabf9f;
+}
+ 
