--- a/style.css
+++ b/style.css
@@ -87,6 +87,41 @@ justify-content: center;
 .li{margin:auto;width: 130px;height: 140px;border-radius: 20px;
 border: 1px solid rgba(0,0,0,0.01);
 border:  2.4px solid #555;}
+@media (max-width:760px){
+
+.li{margin-left: 15px;margin-right: 15px ;width: 130px;height: 140px;border-radius: 20px;
+border: 1px solid rgba(0,0,0,0.01);
+border:  2.4px solid #555;}
+
+
+
+.intro i{
+ font-weight: bold;
+ padding-top: 30px;
+ padding-bottom: 30px;
+ transition: 0.4s ease-in-out;
+ font-size: 70px;
+}
+.intro i:hover{
+ opacity: 0.7;
+ color:white;
+}
+
+.intro-span{
+ color:#eabf9f;
+}
+
+
+.ab{
+ height: 320px;
+ background-image: url('oj.jpeg');
+ background-size: cover;
+ background-repeat: no-repeat;
+ background-attachment:fixed;
+ color:white;
+}
+ 
+}
 
 .li a{text-decoration: none;}
 .li:hover{box-shadow: inset 4px 4px 6px -1px rgba(0,0,0,0.2),
